fixed waiting + spacing for controls

--- a/src/style.css
+++ b/src/style.css
@@ -416,7 +416,7 @@ header{
   width: fit-content;
 	margin: auto;
 	border-radius: 25px;
-	margin-bottom: 15vh;
+	margin-bottom: 5vh;
 	padding-left:10%;
 	padding-right:10%;
   display: flow-root;
